--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,9 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	thijse/ArduinoLog@^1.1.1
 	bblanchon/ArduinoJson@^6.19.2
-	https://github.com/tzapu/WiFiManager.git
+	tzapu/WiFiManager@^2.0.9-beta
+	; khoih-prog/ESP_DoubleResetDetector@^1.3.1
+
 monitor_speed = 115200
 
 ; https://github.com/tzapu/WiFiManager.git#esp32s2
