--- a/platformio.ini
+++ b/platformio.ini
@@ -11,39 +11,16 @@
 [env]
 framework = arduino
 lib_deps = 
-	SPIFFS
 	adafruit/Adafruit AHTX0@^2.0.1
 	adafruit/Adafruit SSD1306@^2.5.1
-	adafruit/Adafruit GFX Library@^1.10.13
-	knolleary/PubSubClient@^2.8
-	thijse/ArduinoLog@^1.1.1
-	bblanchon/ArduinoJson@^6.19.2
-	tzapu/WiFiManager@^2.0.9-beta
-
+	adafruit/Adafruit GFX Library@^1.10.12
+	knolleary/PubSubClient@^2.8.0
+	bblanchon/ArduinoJson@^6.19.3
+	https://github.com/tzapu/WiFiManager.git#v2.0.9-beta
+	khoih-prog/ESP_DoubleResetDetector@^1.3.1
 monitor_speed = 115200
 
-; https://github.com/tzapu/WiFiManager.git#esp32s2
-
-; [env:esp32]
-; platform = espressif32
-; board = esp32dev
-
 [env:esp32s2]
-platform = espressif32
-platform_packages = 
-	toolchain-xtensa32s2
-	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.0-alpha1
-board = esp32dev
-board_build.mcu = esp32s2
-
-; platform_packages = 
-; 	toolchain-xtensa32s2
-; 	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.0-alpha1
-
-; See https://github.com/platformio/platform-espressif32/issues/546#issuecomment-873383838
-board_build.flash_mode = qio
-
-; board_build.partitions = partitions.csv
-build_flags =
-;   -DCORE_DEBUG_LEVEL=5
-;   -DARDUINO_VARIANT="esp32"
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2idf/platform-espressif32-2.0.2.zip
+board = esp32-s2-saola-1
+lib_ignore = LittleFS_esp32
